--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -19,6 +19,4 @@ runs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
 
     - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e .[dev]
+        run: /bin/bash .devcontainer/res/post_create_command.bash
