--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,3 +1,4 @@
+---
 # -------------------------------------------------------------------
 # Contains a GitHub Actions workflow for running pre-commit hooks.
 # -------------------------------------------------------------------
@@ -14,11 +15,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup packages
-        uses: ./.github/actions/setup
+        uses: .github/actions/setup
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Run pre-commit hooks
-        uses: pre-commit/action@v3.0.1
-        with:
-          extra_args: --all-files
+        uses: python setup_scripts.py run_repository_checks
