--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   pytest:
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         python-version: [3.11, 3.12, 3.13]
@@ -22,14 +22,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup packages
-        uses: ./.github/actions/setup
+        uses: .github/actions/setup
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Run pytest
-        run: pytest --cov --cov-report=xml --maxfail=1 --disable-warnings
+        run: python setup_scripts.py run_unit_tests
 
       - name: Upload coverage
         uses: codecov/codecov-action@v5
         with:
           fail_ci_if_error: false
+          files: test_results/coverage.xml
