--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup packages
-        uses: .github/actions/setup
+        uses: ./.github/actions/setup
         with:
           python-version: ${{ matrix.python-version }}
 
