--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -6,6 +6,8 @@ inputs:
     default: '3.11'
 
 runs:
+  using: 'composite'
+  
   steps:
     - name: Set up Python
         uses: actions/setup-python@v4
