--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -21,4 +21,5 @@ runs:
         key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
 
     - name: Install dependencies
+      shell: bash
       run: /bin/bash .devcontainer/res/post_create_command.bash
