--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -20,4 +20,5 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Run pre-commit hooks
-        uses: python setup_scripts.py run_repository_checks
+        run: python setup_scripts.py run_repository_checks
+        shell: bash
