--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run pytest
         shell: bash
-        run: python setup_scripts.py run_unit_tests
+        run: source venv/bin/activate && python setup_scripts.py run_unit_tests
 
       - name: Upload coverage
         uses: codecov/codecov-action@v5
