--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -10,6 +10,11 @@ on: [push]
 jobs:
   checks:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python-version: [3.11, 3.12, 3.13]
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,5 +25,5 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Run pre-commit hooks
-        run: python setup_scripts.py run_repository_checks
+        run: source venv/bin/activate && python setup_scripts.py run_repository_checks
         shell: bash
