Add new extensions to .devcontainer setup

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,9 @@
 				"eamodio.gitlens",
 				"streetsidesoftware.code-spell-checker",
 				"matangover.mypy",
-				"ms-toolsai.tensorboard"
+				"ms-toolsai.tensorboard",
+				"mhutchie.git-graph",
+				"ms-toolsai.jupyter"
 			]
 		}
 	}
