--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ requires-python=">=3.11"
 dependencies = [
     "torch>=2.5.1",
     "tensorboard>=2.18.0",
+    "tqdm>=4.66.5"
 ]
 
 [project.optional-dependencies]
